[feature #165930333] this commit view bank accounts and transactions for signed user

--- a/UI/HTML/admin.html
+++ b/UI/HTML/admin.html
@@ -100,7 +100,7 @@ height: 100%;">
 
                     <div class="createAccNotification" id="createAccountNotification">
                         <p>Are you sure you want to create an admin/staff account?</p>
-                        <input type="button" value="No" id="createAccValueNO" class="submitinput" onclick="NOclose()">
+                        <input type="button" value="NO" id="createAccValueNO" class="submitinput" onclick="NOclose()">
                         <input type="submit" value="YES" id="submitbutton" class="submitinput" onclick="YESclose()">
                     </div>
                 </form>
