updated fetch api

--- a/UI/HTML/login.html
+++ b/UI/HTML/login.html
@@ -31,7 +31,7 @@ height: 100%;">
     <div id="hidden-nav-bar" class="side-nav-bar">
         <a href="#" class="close-icon" onclick="closeHiddenMenuArea()">&times;</a>
         <a href="#" onclick="showCreateAccountLogin()">Create Account</a>
-        <a href="#" onclick="showTransactionLogin()">Transactions</a>
+        <a href="#" class="viewUsersAccountsClass" onclick="viewBankAccountLogin()">Bank accounts</a>
         <li><a href="#" onclick="showResetPasswordLogin()">Reset Password</a></li>
         <a href="../index.html">Logout</a>
        
@@ -55,7 +55,7 @@ height: 100%;">
         <div class="sideMenu">
                 <ul class="navbar-nav">
                     <li id="login1"><a href="#" onclick="showCreateAccountLogin()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
-                    <li id="login2"><a href="#" onclick="showTransactionLogin()"><i class="fas fa-exchange-alt"></i> &nbsp; Transactions</a></li>
+                    <li id="login2"><a href="#" class="viewUsersAccountsClass" onclick="viewBankAccountLogin()"><i class="fas fa-exchange-alt"></i> &nbsp; Bank accounts</a></li>
                     <li id="login3"><a href="#" onclick="showResetPasswordLogin()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
                     <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
                     
@@ -95,73 +95,8 @@ height: 100%;">
             <!-- TRANSACTION FIELD -->
 
            <div class="transactionsPage" id="LoginTransactions">
-               <h3>List of Transactions</h3>
-               <table>
-                    <tr>
-                        <th>No</th>
-                        <th>Account Number</th>
-                        <th>Amount</th>
-                        <th>Cashier</th>
-                        <th>Transaction Type</th>
-                        <th>Old Balance</th>
-                        <th>New Balance</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>04-2754-100</td>
-                        <td>1000 frw</td>
-                        <td>Emmanuel GISA</td>
-                        <td>Debit</td>
-                        <td>2000 frw</td>
-                        <td>1000 frw</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>04-2754-100</td>
-                        <td>1000 frw</td>
-                        <td>Chris GATERA</td>
-                        <td>Credit</td>
-                        <td>8000 frw</td>
-                        <td>9000 frw</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>04-2754-100</td>
-                        <td>1000 frw</td>
-                        <td>Chris GATERA</td>
-                        <td>Credit</td>
-                        <td>9000 frw</td>
-                        <td>10000 frw</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>04-2754-100</td>
-                        <td>1000 frw</td>
-                        <td>Emmanuel GISA</td>
-                        <td>Credit</td>
-                        <td>1000 frw</td>
-                        <td>2000 frw</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>04-2754-100</td>
-                        <td>1000 frw</td>
-                        <td>Emmanuel GISA</td>
-                        <td>Credit</td>
-                        <td>1000 frw</td>
-                        <td>2000 frw</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>04-2754-100</td>
-                        <td>1000 frw</td>
-                        <td>Katia UMURUNGI</td>
-                        <td>Credit</td>
-                        <td>2000 frw</td>
-                        <td>3000 frw</td>
-                    </tr>
-
-                </table>
+                <div id="accountsListId"></div>
+                <div id="transactionsId"> </div>
                 <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeLoginPages()">&times;</a>
            </div>
            <!-- CREATE RESET PASSWORD -->
@@ -209,6 +144,7 @@ height: 100%;">
 <script src="../JS/index.js"></script>
 <script src="../JS/login.fetch.js"></script>
 <script src="../JS/loginCreateBankAcc.js"></script>
+<script src="../JS/login.viewUserAccounts.js"></script>
 
 
 
