--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -35,7 +35,7 @@ height: 100%;" >
     <div id="hidden-nav-bar" class="side-nav-bar">
         <a href="#" class="close-icon" onclick="closeHiddenMenuArea()">&times;</a>
         <a href="#" onclick="showCreateAccountSignup()">Create Account</a>
-        <a href="#" onclick="ViewBankAccountsSignup()">Bank accounts</a>
+        <a href="#" class="viewUsersAccountsClass" onclick="ViewBankAccountsSignup()">Bank accounts</a>
         <a href="#" onclick="showResetPasswordSignup()">Reset Password</a>
         <a href="../index.html">Logout</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
@@ -59,7 +59,7 @@ height: 100%;" >
                 <div class="sideMenu">
                         <ul class="navbar-nav">
                             <li id="signup1"><a href="#" onclick="showCreateAccountSignup()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
-                            <li id="signup2"><a href="#" id="viewUsersAccountsId" onclick="ViewBankAccountsSignup()"><i class="fas fa-exchange-alt"></i> &nbsp; Bank accounts</a></li>
+                            <li id="signup2"><a href="#" class="viewUsersAccountsClass" onclick="ViewBankAccountsSignup()"><i class="fas fa-exchange-alt"></i> &nbsp; Bank accounts</a></li>
                             <li id="signup3"><a href="#" onclick="showResetPasswordSignup()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
                             <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
                             <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
