--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -30,7 +30,7 @@ height: 100%;" >
         <a href="#" class="close-icon" onclick="closeHiddenMenuArea()">&times;</a>
         <a href="#" onclick="showCreateAccount()">Credit</a>
         <a href="#" onclick="showDebitPage()">Debit</a>
-        <a href="#" onclick="showTransaction()">Users' Accounts</a>
+        <a class="allUsersAccounts" href="#" onclick="showTransaction()">Users' Accounts</a>
         <li><a href="#" onclick="showResetPassword()">Reset Password</a></li>
         <a href="../index.html">Logout</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
@@ -53,7 +53,7 @@ height: 100%;" >
                 <ul class="navbar-nav">
                     <li id="liCreateAcc"><a href="#" onclick="showCreateAccount()"><i class="fas fa-credit-card"></i> &nbsp; Credit</a></li>
                     <li id="liDebit"><a href="#" onclick="showDebitPage()"><i class="fas fa-credit-card"></i> &nbsp; Debit</a></li>
-                    <li id="liUsersAcc"><a href="#" onclick="showTransaction()"><i class="fas fa-exchange-alt"></i> &nbsp; Users' Accounts</a></li>
+                    <li class="allUsersAccounts" id="liUsersAcc"><a href="#" onclick="showTransaction()"><i class="fas fa-exchange-alt"></i> &nbsp; Users' Accounts</a></li>
                     <li id="liResetPassword"><a href="#" onclick="showResetPassword()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
                     <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
                     <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
@@ -113,80 +113,10 @@ height: 100%;" >
             <!-- LIST OF ACCOUNTS -->
 
            <div class="transactionsPage" id="transaction-page">
-            <h3>List of Users' Accounts</h3>
-            <table>
-                 <tr>
-                     <th>No</th>
-                     <th>Account Number</th>
-                     <th>Created On</th>
-                     <th>Owner</th>
-                     <th>Bank Type</th>
-                     <th>Status</th>
-                     <th>Balance</th>
-                     <!-- <th>Options</th> -->
-                 </tr>
-                 <tr onclick="viewSpecificAccountRecord()">
-                     <td>1</td>
-                     <td>040-2754-100</td>
-                     <td>02-10-2018</td>
-                     <td>GISA Chris</td>
-                     <td>Saving</td>
-                     <td>Active</td>
-                     <td>700,000 frw</td>
-                     <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                 </tr>
-                 <tr onclick="viewSpecificAccountRecord()">
-                     <td>2</td>
-                     <td>040-3700-105</td>
-                     <td>03-10-2018</td>
-                     <td>KAMI Christian</td>
-                     <td>Saving</td>
-                     <td>Active</td>
-                     <td>900,000 frw</td>
-                     <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                 </tr>
-                 <tr onclick="viewSpecificAccountRecord()">
-                     <td>3</td>
-                     <td>040-2754-078</td>
-                     <td>02-10-2018</td>
-                     <td>GAKWAYA Kevin</td>
-                     <td>Current</td>
-                     <td>Active</td>
-                     <td>1,000,000 frw</td>
-                     <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                 </tr>
-                 <tr onclick="viewSpecificAccountRecord()">
-                     <td>4</td>
-                     <td>040-2764-070</td>
-                     <td>02-10-2018</td>
-                     <td>GISA Christophe</td>
-                     <td>Saving</td>
-                     <td>Active</td>
-                     <td>700,000 frw</td>
-                     <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                 </tr>
-                 <tr onclick="viewSpecificAccountRecord()">
-                     <td>5</td>
-                     <td>040-2754-085</td>
-                     <td>02-10-2018</td>
-                     <td>GASANA Christophe</td>
-                     <td>Current</td>
-                     <td>Active</td>
-                     <td>700,000 frw</td>
-                     <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                 </tr>
-                 <tr onclick="viewSpecificAccountRecord()">
-                     <td>6</td>
-                     <td>040-2750-020</td>
-                     <td>02-10-2018</td>
-                     <td>GISANA Chris</td>
-                     <td>Saving</td>
-                     <td>Active</td>
-                     <td>800,000 frw</td>
-                     <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                 </tr>
 
-             </table>
+                <div id="accountsListId"></div>
+
+                <div id="transactionsId"> </div>
             <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeTransactions()">&times;</a>
            </div>
 
@@ -238,80 +168,8 @@ height: 100%;" >
             <!-- WELCOME NOTE DIV -->
             <div class="newusersTable" id="signupDashboard">
                 <div class="transactionsPageHome" id="transactionsPageHomeId">
-                    <h3>List of Users' Accounts</h3>
-                    <table>
-                         <tr>
-                             <th>No</th>
-                             <th>Account Number</th>
-                             <th>Created On</th>
-                             <th>Owner</th>
-                             <th>Bank Type</th>
-                             <th>Status</th>
-                             <th>Balance</th>
-                             <!-- <th>Options</th> -->
-                         </tr>
-                         <tr onclick="viewSpecificAccountRecord()">
-                             <td>1</td>
-                             <td>040-2754-100</td>
-                             <td>02-10-2018</td>
-                             <td>GISA Chris</td>
-                             <td>Saving</td>
-                             <td>Active</td>
-                             <td>700,000 frw</td>
-                             <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                         </tr>
-                         <tr onclick="viewSpecificAccountRecord()">
-                             <td>2</td>
-                             <td>040-3700-105</td>
-                             <td>03-10-2018</td>
-                             <td>KAMI Christian</td>
-                             <td>Saving</td>
-                             <td>Active</td>
-                             <td>900,000 frw</td>
-                             <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                         </tr>
-                         <tr onclick="viewSpecificAccountRecord()">
-                             <td>3</td>
-                             <td>040-2754-078</td>
-                             <td>02-10-2018</td>
-                             <td>GAKWAYA Kevin</td>
-                             <td>Current</td>
-                             <td>Active</td>
-                             <td>1,000,000 frw</td>
-                             <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                         </tr>
-                         <tr onclick="viewSpecificAccountRecord()">
-                             <td>4</td>
-                             <td>040-2764-070</td>
-                             <td>02-10-2018</td>
-                             <td>GISA Christophe</td>
-                             <td>Saving</td>
-                             <td>Active</td>
-                             <td>700,000 frw</td>
-                             <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                         </tr>
-                         <tr onclick="viewSpecificAccountRecord()">
-                             <td>5</td>
-                             <td>040-2754-085</td>
-                             <td>02-10-2018</td>
-                             <td>GASANA Christophe</td>
-                             <td>Current</td>
-                             <td>Active</td>
-                             <td>700,000 frw</td>
-                             <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                         </tr>
-                         <tr onclick="viewSpecificAccountRecord()">
-                             <td>6</td>
-                             <td>040-2750-020</td>
-                             <td>02-10-2018</td>
-                             <td>GISANA Chris</td>
-                             <td>Saving</td>
-                             <td>Active</td>
-                             <td>800,000 frw</td>
-                             <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
-                         </tr>
-                     </table>
-                     <!-- <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeTransactions()">&times;</a> -->
+                    <div id="homepageAccounts"></div>
+                    <div id="accountDetailsArea"></div>
                 </div> 
             </div>
             <div id="createdACCnotification" class="createdstaff"> 
@@ -329,5 +187,6 @@ height: 100%;" >
 <script src="../JS/index.js"></script>
 <script src="../JS/staff.fetch.credit.js"></script>
 <script src="../JS/staff.fetch.debit.js"></script>
+<script src="../JS/staffViewAllAccounts.js"></script>
 </body>
 </html>
